Fixed update and delete icon spacing

--- a/react-app/src/components/mainComponent/mainComponent.css
+++ b/react-app/src/components/mainComponent/mainComponent.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     /* hard-coded pixel size as temporary solution */
-    height: 100%
+    height: 96%;
 }
 
 .main-servers-div {
